first test on a real component albiet a simple one

--- a/lwcJestInstruction/force-app/main/default/lwc/myFirstComponent/myFirstComponent.html
+++ b/lwcJestInstruction/force-app/main/default/lwc/myFirstComponent/myFirstComponent.html
@@ -1,3 +1,8 @@
 <template>
-    
+  <lightning-card title="Hello" icon-name="custom:custom14">
+    <div class="slds-var-m-around_medium first">Hello, {greeting}!</div>
+    <div class="slds-var-m-around_medium second">
+      My greeting is: {greeting}.
+    </div>
+  </lightning-card>
 </template>
