configure child component so that it can be tested by itself

--- a/lwcJestInstruction/force-app/main/default/lwc/myChildComp/myChildComp.html
+++ b/lwcJestInstruction/force-app/main/default/lwc/myChildComp/myChildComp.html
@@ -1,6 +1,6 @@
 <template>
   <template if:true={userDetail}>
-    <div>{userDetail.Name}</div>
+    <div class="userName">{userDetail.Name}</div>
   </template>
   <template if:false={userDetail}>
     <p>No user data available.</p>
