new version started

--- a/lwcJestInstruction/force-app/main/default/lwc/myApexMethodComp/myApexMethodComp.html
+++ b/lwcJestInstruction/force-app/main/default/lwc/myApexMethodComp/myApexMethodComp.html
@@ -8,7 +8,7 @@
     </div>
     <template if:true={accounts}>
       <template for:each={accounts} for:item="account">
-        <p key={account.Id} class="accountName">{account.Name}</p>
+        <p key={account.Id}>{account.Name}</p>
       </template>
     </template>
     <template if:true={error}>
